--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "@material-ui/core": "^4.0.2",
     "@material-ui/icons": "^4.0.1",
+    "material-ui": "^0.20.2",
     "material-ui-icons": "^1.0.0-beta.36",
     "react": "^16.8.6",
     "react-dom": "^16.2.0",
+    "react-icons": "^2.2.7",
     "react-mdl": "^1.11.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "^3.0.1",
