--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@material-ui/icons": "^4.0.1",
     "material-ui": "^0.20.2",
     "material-ui-icons": "^1.0.0-beta.36",
+    "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.2.0",
     "react-icons": "^2.2.7",
