--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@material-ui/core": "^4.0.2",
     "@material-ui/icons": "^4.0.1",
+    "jquery": "^3.4.1",
     "material-ui": "^0.20.2",
     "material-ui-icons": "^1.0.0-beta.36",
+    "mixitup": "^3.3.1",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.2.0",
