--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.2.0",
+    "react-google-maps": "^9.4.5",
     "react-icons": "^2.2.7",
     "react-mdl": "^1.11.0",
     "react-router-dom": "^4.2.2",
