--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@material-ui/core": "^4.0.2",
     "@material-ui/icons": "^4.0.1",
+    "axios": "^0.19.0",
+    "eslint-plugin-disable": "^1.0.4",
+    "firebase": "^6.2.1",
     "jquery": "^3.4.1",
     "material-ui": "^0.20.2",
     "material-ui-icons": "^1.0.0-beta.36",
