--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
     "@material-ui/core": "^4.0.2",
     "@material-ui/icons": "^4.0.1",
     "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
+    "concurrently": "^4.1.0",
     "eslint-plugin-disable": "^1.0.4",
+    "express": "^4.17.1",
     "firebase": "^6.2.1",
     "jquery": "^3.4.1",
     "material-ui": "^0.20.2",
     "material-ui-icons": "^1.0.0-beta.36",
     "mixitup": "^3.3.1",
     "node-sass": "^4.12.0",
+    "nodemailer": "^6.2.1",
+    "nodemon": "^1.19.1",
     "react": "^16.8.6",
     "react-dom": "^16.2.0",
     "react-google-maps": "^9.4.5",
@@ -30,6 +35,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "server": "nodemon server/index.js",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
@@ -47,5 +54,19 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "A React based portfolio app using create-react-app and React Router v4.",
+  "main": "index.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/elisarenda/portfolio-react.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/elisarenda/portfolio-react/issues"
+  },
+  "homepage": "https://github.com/elisarenda/portfolio-react#readme"
 }
