--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "myportfoliosite",
   "version": "0.1.0",
   "private": true,
+  "homepage":"https://ElisaRenda.github.io/ElisaRenda.github.io",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.19",
     "@fortawesome/free-brands-svg-icons": "^5.9.0",
@@ -16,6 +17,7 @@
     "eslint-plugin-disable": "^1.0.4",
     "express": "^4.17.1",
     "firebase": "^6.2.1",
+    "gh-pages": "^2.0.1",
     "jquery": "^3.4.1",
     "material-ui": "^0.20.2",
     "material-ui-icons": "^1.0.0-beta.36",
@@ -35,14 +37,13 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "server": "nodemon server/index.js",
-    "client": "npm run start --prefix",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "lint": "eslint --ext .js,.jsx .",
-    "fix": "eslint --ext .js,.jsx . --fix"
+    "fix": "eslint --ext .js,.jsx . --fix",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build"
   },
   "browserslist": {
     "production": [
