--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "myportfoliosite",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://ElisaRenda.github.io/ElisaRenda.github.io",
+  "homepage":"https://ElisaRenda.github.io/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.19",
     "@fortawesome/free-brands-svg-icons": "^5.9.0",
