--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "myportfoliosite",
+  "name": "portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://elisarenda.github.io/",
+  "homepage": "https://elisarenda.github.io/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.19",
     "@fortawesome/free-brands-svg-icons": "^5.9.0",
@@ -17,7 +17,6 @@
     "eslint-plugin-disable": "^1.0.4",
     "express": "^4.17.1",
     "firebase": "^6.2.1",
-    "gh-pages": "^2.0.1",
     "jquery": "^3.4.1",
     "material-ui": "^0.20.2",
     "material-ui-icons": "^1.0.0-beta.36",
@@ -42,8 +41,6 @@
     "eject": "react-scripts eject",
     "lint": "eslint --ext .js,.jsx .",
     "fix": "eslint --ext .js,.jsx . --fix",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build"
   },
   "browserslist": {
     "production": [
