--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-plugin-disable": "^1.0.4",
     "express": "^4.17.1",
     "firebase": "^6.2.1",
+    "gh-pages": "^2.0.1",
     "jquery": "^3.4.1",
     "material-ui": "^0.20.2",
     "material-ui-icons": "^1.0.0-beta.36",
@@ -41,6 +42,8 @@
     "eject": "react-scripts eject",
     "lint": "eslint --ext .js,.jsx .",
     "fix": "eslint --ext .js,.jsx . --fix",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": {
     "production": [
