--- a/package.json
+++ b/package.json
@@ -4,22 +4,24 @@
   "private": true,
   "homepage": "https://elisarenda.github.io/",
   "dependencies": {
+    "@babel/runtime": "^7.4.5",
     "@fortawesome/fontawesome-svg-core": "^1.2.19",
     "@fortawesome/free-brands-svg-icons": "^5.9.0",
     "@fortawesome/free-regular-svg-icons": "^5.9.0",
     "@fortawesome/free-solid-svg-icons": "^5.10.0-4",
     "@fortawesome/react-fontawesome": "^0.1.4",
-    "@material-ui/core": "^4.0.2",
+    "@material-ui/core": "^4.1.3",
     "@material-ui/icons": "^4.0.1",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "concurrently": "^4.1.0",
+    "create-react-class": "^15.6.3",
     "eslint-plugin-disable": "^1.0.4",
     "express": "^4.17.1",
     "firebase": "^6.2.1",
     "gh-pages": "^2.0.1",
     "jquery": "^3.4.1",
-    "material-ui": "^0.20.2",
+    "material-ui": "^1.0.0-beta.47",
     "material-ui-icons": "^1.0.0-beta.36",
     "mixitup": "^3.3.1",
     "node-sass": "^4.12.0",
@@ -31,6 +33,7 @@
     "react-google-maps": "^9.4.5",
     "react-icons": "^2.2.7",
     "react-mdl": "^1.11.0",
+    "react-progress-button": "^5.1.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "^3.0.1",
     "react-typist": "^2.0.5",
